Add baddy endpoint for all schema and dataset metadata
